<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/register" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tillUsername"
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                style="@style/modifiedEditText"
                android:hint="Username"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tillFirstName"
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFirstName"
                style="@style/modifiedEditText"
                android:hint="First Name"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tillLastName"
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLastName"
                style="@style/modifiedEditText"
                android:hint="Last Name"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tillEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/modifiedEditText"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tillCountry"
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCountry"
                style="@style/modifiedEditText"
                android:hint="@string/choose_country"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tillClub"
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etClub"
                style="@style/modifiedEditText"
                android:hint="@string/club"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tillPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tillConfirmPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPassword"
                style="@style/modifiedEditText"
                android:hint="@string/confirm_password"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="Register" />

        <TextView
            android:id="@+id/signIn"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/signup_login_hint"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
