<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AddParticipantsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivParticipantPhoto"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/ic_person_black_24dp"
                app:layout_constraintStart_toStartOf="@+id/tillParticipantCoachName"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btnAddPhoto"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_add_a_photo_black_24dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/ivParticipantPhoto"
                app:layout_constraintEnd_toEndOf="@id/ivParticipantPhoto"
                tools:layout_editor_absoluteX="19dp"
                tools:layout_editor_absoluteY="5dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tillParticipantFirstName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:hint="@string/first_name"
                app:layout_constraintTop_toTopOf="@+id/ivParticipantPhoto"
                app:layout_constraintBottom_toTopOf="@id/tillParticipantLastName"
                app:layout_constraintEnd_toEndOf="@id/tillParticipantLastName"
                app:layout_constraintStart_toStartOf="@+id/tillParticipantLastName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etParticipantFirstName"
                    style="@style/modifiedEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tillParticipantLastName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                app:layout_constraintBottom_toBottomOf="@id/ivParticipantPhoto"
                app:layout_constraintEnd_toEndOf="@id/tillParticipantCoachName"
                app:layout_constraintTop_toBottomOf="@id/tillParticipantFirstName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etParticipantLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tillParticipantClub"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:hint="@string/club"
                app:layout_constraintEnd_toEndOf="@id/btnAddParticipant"
                app:layout_constraintStart_toStartOf="@id/ivParticipantPhoto"
                app:layout_constraintTop_toBottomOf="@id/ivParticipantPhoto">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etParticipantClub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tillParticipantCoachName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:hint="@string/coach"
                app:layout_constraintEnd_toEndOf="@id/btnAddParticipant"
                app:layout_constraintStart_toStartOf="@id/ivParticipantPhoto"
                app:layout_constraintTop_toBottomOf="@id/tillParticipantClub">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etParticipantCoachName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tillParticipantCountry"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:hint="@string/choose_country"
                app:layout_constraintEnd_toEndOf="@id/btnAddParticipant"
                app:layout_constraintStart_toStartOf="@id/ivParticipantPhoto"
                app:layout_constraintTop_toBottomOf="@id/tillParticipantCoachName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etParticipantCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tillParticipantBirthday"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:hint="@string/birthday"
                app:layout_constraintEnd_toEndOf="@id/btnAddParticipant"
                app:layout_constraintStart_toStartOf="@id/ivParticipantPhoto"
                app:layout_constraintTop_toBottomOf="@id/tillParticipantCountry">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etParticipantBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tillAge">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tillParticipantWeight"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_14sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:hint="@string/weight">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etParticipantWeight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tillParticipantGender"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_14sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:layout_weight="1.5"
                    android:hint="@string/gender"
                    app:endIconMode="dropdown_menu">

                    <com.google.android.material.textview.MaterialAutoCompleteTextView
                        android:id="@+id/etParticipantGender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:inputType="textAutoComplete"
                        android:paddingStart="@dimen/_8sdp"
                        tools:ignore="RtlSymmetry" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tillAge"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/age"
                app:layout_constraintEnd_toEndOf="@id/btnAddParticipant"
                app:layout_constraintStart_toStartOf="@id/ivParticipantPhoto"
                app:layout_constraintTop_toBottomOf="@id/tillParticipantBirthday">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnAddParticipant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:clickable="true"
                android:elevation="@dimen/_14sdp"
                android:focusable="true"
                app:tint="#ffffff"
                android:src="@drawable/ic_save_black_24dp"
                android:visibility="visible"
                app:backgroundTint="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:pressedTranslationZ="@dimen/_10sdp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu">

    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>