<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">
    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">
        <TextView
            style="@style/headerTextPrimary"
            android:text="Login"
            android:layout_marginTop="@dimen/loginViewsMargin"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                style="@style/modifiedEditText"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/login_email_hint"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:inputType="textPassword"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_8sdp">
            <CheckBox
                android:id="@+id/rememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remember me"
                android:layout_gravity="start"
                android:singleLine="true"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/primaryTextColor"
                android:layout_weight="1"/>

            <TextView
                style="@style/viewParent"
                android:text="Forgot Password?"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/_11sdp"
                android:layout_gravity="end"
                android:singleLine="true"
                android:onClick="viewForgotPAssword"
                android:layout_weight="1"/>
        </LinearLayout>

        <Button
            android:id="@+id/cirLoginButton"
            style="@style/loginButton"
            android:text="Login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"/>
        <TextView
            android:id="@+id/signUp"
            style="@style/parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/primaryTextColor"
            android:text="@string/login_signup_hint"
            android:onClick="viewRegisterClicked"
            android:layout_marginTop="@dimen/loginViewsMargin"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
